@@ -1,3 +1,10 @@
+2003-08-22 06:00  kbs
+	* Modified wxpp.rb to eliminate dozens of compiler warnings about 
+	possibly uninitialized variables, and unused variables. Some 
+	warnings may remain. I would have eliminted them earlier, but my 
+	compiler only started complaining a couple weeks ago.
+	
+
 2003-08-22 05:30  kbs
 	* Updated README and created several platform-specific README.xxx files
 	
